# e2e-fraud-detection.v3

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/: MLTable
deploy/container_apps/: Dockerfile  requirements.txt
notebook/: eda.ipynb
scripts/: az_resource_create.py  git_add_secret.py  register_data_az.py
src/: .amlignore
src/fraud_detection/: cli.py  config.py
src/fraud_detection/azure/: client.py
src/fraud_detection/data/data_for_train/: comp_data_for_train.py  data_for_train.py  data_for_train_env.yaml
src/fraud_detection/data/data_val/: comp_data_validate.py  data_validate.py  data_validate_env.yaml
src/fraud_detection/monitoring/: __init__.py  data_loading.py  drift.py  endpoint_client.py  evaluate_endpoint.py  mlflow_utils.py  monitor.py  monitor_env.yaml  submit_monitor.py
src/fraud_detection/pipeline/: data_pipeline.py  deployment_pipeline.py
src/fraud_detection/registry/: comp_prod_model.py  prod_model.py  prod_model_env.yaml
src/fraud_detection/serving/: __init__.py  comp_serve_prod.py  endpoint_ops.py  score.py  scoring_env.yaml  serve_env.yaml  serve_prod_model.py
src/fraud_detection/serving/container_registry/: __init__.py  container_app_runtime.py  container_apps.py  fastapi_app.py
src/fraud_detection/serving/managed_endpoint/: __init__.py  comp_serve_prod.py  scoring_env.yaml  serve_prod_model.py  (+1 more)
src/fraud_detection/training/: automl.py
src/fraud_detection/utils/: compute.py  logging.py  metric_keys.py  versioning.py
tests/: conftest.py
tests/cli/: test_cli_commands.py  test_cli_help.py
tests/integration/: test_component_specs.py  test_job_builders.py  test_monitoring_flow.py
tests/unit/: test_data_prep.py  test_data_validation.py  test_drift.py  test_metrics.py  test_registry.py  test_serving_utils.py  test_versioning.py
(+7 files in other folders)
